...
  <string name="workspace_detail_downloading">Downloading %1$s%2$s</string>
  <string name="workspace_detail_extracting">Extracting %1$d items%2$s</string>
  <string name="workspace_detail_install_complete">Installation complete</string>
  <string name="workspace_terminal_title">Terminal</string>
  <string name="workspace_terminal_title_with_name">%s · Terminal</string>
  <string name="workspace_terminal_not_installed">Please install Rootfs first</string>
  <string name="workspace_terminal_loading">Loading workspace…</string>
  <string name="workspace_terminal_exited">Terminal exited</string>
  <string name="workspace_terminal_tab_title">Terminal %1$d</string>
  <string name="workspace_terminal_limit_reached">At most %1$d terminal tabs are allowed</string>
  <string name="workspace_terminal_create_failed">Failed to create terminal: %1$s</string>
  <string name="workspace_terminal_close_title">Close terminal?</string>
  <string name="workspace_terminal_close_confirmation">Close \"%1$s\"? Commands running in this tab will be terminated.</string>
  <string name="workspace_terminal_close_action">Close</string>
...
